apps/lldap/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lldap
  labels:
    enable-reloader-operator-watching: "true"
