apps/lldap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap-web
spec:
  selector:
    app: lldap
  ports:
    - name: web
      port: 80
      targetPort: web
---
apiVersion: v1
kind: Service
metadata:
  name: lldap
spec:
  selector:
    app: lldap
  ports:
    - name: ldap
      port: 389
      targetPort: ldap
