apps/lldap/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lldap-httproute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Home
    gethomepage.dev/name: LLDAP
    gethomepage.dev/href: "https://lldap.home.alden.ai"
    gethomepage.dev/description: Lightweight LDAP
    gethomepage.dev/icon: lldap.svg
    gethomepage.dev/app: lldap # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/pod-selector: app=lldap
spec:
  parentRefs:
    - name: default-https-gateway
      namespace: istio-system
  hostnames:
    - lldap.home.alden.ai
  rules:
  - backendRefs:
    - name: lldap-web
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
